#12: improving stability; cleaning up; look and feel

--- a/frontend/src/styles/utils.css
+++ b/frontend/src/styles/utils.css
@@ -41,3 +41,9 @@
   margin-bottom: 2rem;
   border-radius: 5px;
 }
+
+.skills-handle-overflow {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  flex: none;
+}
