--- a/frontend/src/styles/utils.css
+++ b/frontend/src/styles/utils.css
@@ -40,6 +40,7 @@
   box-shadow: 0 22px 35px -16px rgba(0,0,0,0.1);
   margin-bottom: 2rem;
   border-radius: 5px;
+  background-color: white;
 }
 
 .skills-handle-overflow {
