--- a/frontend/src/styles/buefy-custom.scss
+++ b/frontend/src/styles/buefy-custom.scss
@@ -10,6 +10,7 @@ $primary: $blue-palette-color1;
 $link: $blue-palette-color5;
 $info: $blue-palette-color2;
 $success: $green-palette-color2;
+$danger: $red-palette-color1;
 
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
 $colors: (
