--- a/frontend/src/styles/palette.scss
+++ b/frontend/src/styles/palette.scss
@@ -11,11 +11,17 @@ $green-palette-color3: #0A9B77;
 $green-palette-color4: #0b7c79;
 $green-palette-color5: #008215;
 
-$monochrome-palette-color1: #777777;
-$monochrome-palette-color2: #bcbcbc;
-$monochrome-palette-color3: #777777;
-$monochrome-palette-color4: #9e9e9e;
-$monochrome-palette-color5: #aaaaaa;
+$monochrome-palette-color1: #333333;
+$monochrome-palette-color2: #141414;
+$monochrome-palette-color3: #161616;
+$monochrome-palette-color4: #262626;
+$monochrome-palette-color5: #282828;
+
+$red-palette-color1: #e2636a;
+$red-palette-color2: #af213b;
+$red-palette-color3: #d85f79;
+$red-palette-color4: #b23221;
+$red-palette-color5: #ef3e82;
 
 $background-color1: #f5f6f1;
 $background-color2: #FFFFFF;
