#8: tweaking colors for modals

--- a/frontend/src/styles/palette.scss
+++ b/frontend/src/styles/palette.scss
@@ -17,11 +17,11 @@ $monochrome-palette-color3: #161616;
 $monochrome-palette-color4: #262626;
 $monochrome-palette-color5: #282828;
 
-$red-palette-color1: #e2636a;
-$red-palette-color2: #af213b;
-$red-palette-color3: #d85f79;
-$red-palette-color4: #b23221;
-$red-palette-color5: #ef3e82;
+$red-palette-color1: #8c0009;
+$red-palette-color2: #9e032c;
+$red-palette-color3: #a0170b;
+$red-palette-color4: #b50c03;
+$red-palette-color5: #b20c1d;
 
 $background-color1: #f5f6f1;
 $background-color2: #FFFFFF;
