--- a/frontend/src/styles/palette.scss
+++ b/frontend/src/styles/palette.scss
@@ -17,11 +17,11 @@ $monochrome-palette-color3: #161616;
 $monochrome-palette-color4: #262626;
 $monochrome-palette-color5: #282828;
 
-$red-palette-color1: #8c0009;
-$red-palette-color2: #9e032c;
-$red-palette-color3: #a0170b;
-$red-palette-color4: #b50c03;
-$red-palette-color5: #b20c1d;
+$red-palette-color1: #f44336;
+$red-palette-color2: #e53953;
+$red-palette-color3: #d32f2f;
+$red-palette-color4: #c62828;
+$red-palette-color5: #b71c1c;
 
 $background-color1: #f5f6f1;
 $background-color2: #FFFFFF;
