--- a/client-display/src/assets/_common.scss
+++ b/client-display/src/assets/_common.scss
@@ -1,3 +1,11 @@
 .skills-full-height {
   height: 100%;
 }
+
+.skills-container {
+  border: 1px solid #E5E9F2;
+  border-radius: 0.2rem;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+}
