--- a/client-display/src/assets/_common.scss
+++ b/client-display/src/assets/_common.scss
@@ -1,3 +1,13 @@
+@function map-set($map, $key, $value) {
+  $new: ($key: $value);
+  @return map-merge($map, $new);
+}
+
+$sizes: () !default;
+$sizes: map-set($sizes, 85, 85%);
+
+
+
 .skills-full-height {
   height: 100%;
 }
