#45: improve display of dependencies - WIP

--- a/client-display/src/assets/_common.scss
+++ b/client-display/src/assets/_common.scss
@@ -16,3 +16,10 @@ $card-cap-bg: white !default;
 .skills-full-height {
   height: 100%;
 }
+
+.skills-text-description {
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #4f565d;
+}
