#459: improve navigable components look-and-feel - WIP

--- a/client-display/src/assets/_common.scss
+++ b/client-display/src/assets/_common.scss
@@ -18,3 +18,11 @@ $card-cap-bg: white !default;
   line-height: 1.5;
   color: #4f565d;
 }
+
+.skills-navigable-item {
+  cursor: pointer;
+}
+
+.skills-navigable-item:hover {
+  box-shadow: 0 0 2px 1px #17a2b8 ;
+}
