#459: improve navigable components look-and-feel - WIP - working out theming

--- a/client-display/src/assets/_common.scss
+++ b/client-display/src/assets/_common.scss
@@ -24,5 +24,6 @@ $card-cap-bg: white !default;
 }
 
 .skills-navigable-item:hover {
-  box-shadow: 0 0 2px 1px #17a2b8 ;
+  color: #17a2b8;
+  box-shadow: 0 0 2px 1px;
 }
