#7 forgotten password feature, basic capability functioning, cleanup and testing required

--- a/service/src/main/resources/templates/password_reset.html
+++ b/service/src/main/resources/templates/password_reset.html
@@ -14,14 +14,17 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <!DOCTYPE html>
-<html>
+<html
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://www.thymeleaf.org http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 <p>Hi [[${recipientName}]],</p>
 <p>You have requested a password reset. Please use the link below to reset your password. The link will be valid for [[${validTime}]].</p>
-<p>[[${resetLink}]]</p>
+<p><a th:href="@{${publicUrl}+'reset-password/'+${resetToken}}">Reset Password</a></p>
 <p>Regards,</p>
 <p>
     <em>[[${senderName}]] at SkillTree</em> <br />
