#180 work on metrics a11y

--- a/dashboard/src/assets/custom.scss
+++ b/dashboard/src/assets/custom.scss
@@ -20,7 +20,8 @@ $theme-colors: (
         "warning": #ffc42b,
         "header": #f8e9cb,
         "success": #007c49,
-        "hc": #146c75
+        "hc": #146c75,
+        "accessible": darkslategray,
         //"success": #54b986,
 );
 // secondary: #6d8d9c
