--- a/client-display/src/assets/custom.scss
+++ b/client-display/src/assets/custom.scss
@@ -22,6 +22,8 @@ $theme-colors: (
         "success": #007c49,
         "hc": #264653ff,
         "accessible": darkslategray,
+        "hc-info": #00a4e8,
+        "danger": #290000,
         //"success": #54b986,
 );
 // secondary: #6d8d9c
