#152: added self-reporting status card in the skill overview section

--- a/dashboard/src/assets/custom.scss
+++ b/dashboard/src/assets/custom.scss
@@ -115,6 +115,10 @@ $text-muted: #6b6b6b;
   color: #8f7158;
 }
 
+.skills-color-selfreport {
+  color: #e76f51fc;
+}
+
 .sr-only {
   border: 0;
   clip: rect(0, 0, 0, 0);
