--- a/dashboard/src/assets/custom.scss
+++ b/dashboard/src/assets/custom.scss
@@ -28,6 +28,9 @@ $theme-colors: (
 
 $text-muted: #6b6b6b;
 
+//** Background color used for table stripping
+$table-accent-bg: #f9fafa;
+
 // Bootstrap and its default variables
 @import '../../node_modules/bootstrap/scss/bootstrap';
 // BootstrapVue and its default variables
