--- a/service/src/main/resources/templates/skill_approval_request.html
+++ b/service/src/main/resources/templates/skill_approval_request.html
@@ -14,22 +14,58 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <!DOCTYPE html>
-<html
->
+<html   lang="en"
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://www.thymeleaf.org http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <style>
+        .button {
+            border: 1px solid green;
+            border-radius: 2px;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+        }
+
+        .button:hover {
+            cursor: pointer;
+            background-color: #ecffec;
+        }
+
+        .label {
+            color: #525252;
+        }
+    </style>
 </head>
-<body>
-<p>User [[${userRequesting}]] requested [[${numPoints}]] points for '[[${skillName}]]' skill.</p>
+<body class="overall-container">
+<h1>SkillTree Points Requested!</h1>
+<p>User <b>[[${userRequesting}]]</b> requested points. As an approver for the <b>[[${projectName}]]</b> project, you can approve or reject this request.</p>
+
+<p style="font-weight: bold">
+    <a th:href="@{${approveUrl}}" class="button">Approve or Reject</a>
+</p>
+
 <ul>
-    <li>Approval URL: [[${publicUrl}]]projects/[[${projectId}]]/self-reporting</li>
-    <li>User Requested: [[${userRequesting}]]</li>
-    <li>Skill: [[${skillName}]] ([[${skillId}]])</li>
-    <li>Number of Points: [[${numPoints}]]</li>
-    <li>Request Message: [[${requestMsg}]]</li>
+    <li><span class="label">Project</span>: [[${projectName}]]</li>
+    <li><span class="label">Skill</span>: [[${skillName}]]</li>
+    <li><span class="label">Points</span>: [[${numPoints}]]</li>
+    <li><span class="label">Message</span>: [[${requestMsg}]]</li>
 </ul>
-<p>As an approver for '[[${projectId}]]' project you can approve or reject this request.</p>
-<p>Always yours,</p>
-<p>SkillTree Bot</p>
+
+<p>
+Always yours, <br/> -SkillTree Bot
+</p>
+
 </body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <title>SkillTree Points Requested</title>
+    <style>
+
+    </style>
+</head>
 </html>
