#390 - store home page in `settings` table vs. `user_attr`, create new User Preferences view - WIP

--- a/dashboard/src/assets/custom.scss
+++ b/dashboard/src/assets/custom.scss
@@ -94,6 +94,10 @@ $table-accent-bg: #f9fafa;
   color: $success;
 }
 
+.skills-color-preferences {
+  color: #2a9d8fff;
+}
+
 .skills-color-security {
   color: $yellow;
 }
