#420 add header/footer to password reset email, fix bug in skills_approval_request email rendering of html header/footer

--- a/service/src/main/resources/templates/password_reset.html
+++ b/service/src/main/resources/templates/password_reset.html
@@ -22,6 +22,7 @@ limitations under the License.
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+<div th:remove="tag" th:utext="${htmlHeader}" th:if= "${htmlHeader != null}">[[${htmlHeader}]]</div>
 <p>Hi [[${recipientName}]],</p>
 <p>You have requested a password reset. Please use the link below to reset your password. The link will be valid for [[${validTime}]].</p>
 <p><a th:href="@{${publicUrl}+'reset-password/'+${resetToken}}">Reset Password</a></p>
@@ -29,5 +30,6 @@ limitations under the License.
 <p>
     <em>[[${senderName}]] at SkillTree</em> <br />
 </p>
+<div th:remove="tag" th:utext="${htmlFooter}" th:if= "${htmlFooter != null}">[[${htmlFooter}]]</div>
 </body>
 </html>
