#543: developed backend endpoints to load data for the leaderboard both on project and subject pages; wired endpoints to the UI; started working on leaderboard's data selection controls

--- a/client-display/src/assets/custom.scss
+++ b/client-display/src/assets/custom.scss
@@ -50,5 +50,15 @@ $text-muted: #6b6b6b;
   width: 1px;
 }
 
+.skills-color-gold {
+ color: #fee101;
+}
 
+.skills-color-silver {
+  color: #a7a7ad;
+}
+
+.skills-color-bronze {
+  color: #a77044;
+}
 
