--- a/client-display/src/assets/custom.scss
+++ b/client-display/src/assets/custom.scss
@@ -16,7 +16,8 @@
 $theme-colors: (
         //"info": #2d8779,
         "info":#146c75,
-        "primary": #264653ff,
+        "primary": #143740,
+        "secondary": #60737b,
         "warning": #ffc42b,
         "header": #f8e9cb,
         "success": #007c49,
@@ -62,3 +63,6 @@ $text-muted: #6b6b6b;
   color: #a77044;
 }
 
+.skills-color-orange {
+  color: #e76f51fc;
+}
