#527 unused project expiration

--- a/dashboard/src/assets/custom.scss
+++ b/dashboard/src/assets/custom.scss
@@ -21,6 +21,7 @@ $theme-colors: (
         "success": #007c49,
         "hc": #146c75,
         "accessible": darkslategray,
+        "alert": #721c24,
         //"success": #54b986,
 );
 // secondary: #6d8d9c
