#527 responding to code review comments

--- a/service/src/main/resources/templates/project_expiration.html
+++ b/service/src/main/resources/templates/project_expiration.html
@@ -27,7 +27,7 @@ limitations under the License.
 <p>Your SkillTree Project [[${projectName}]], created on [[${createdOn}]] hasn't been used in at least [[${unusedProjectExpirationInDays}]] days.</p>
 <p>If you take no action, Project [[${projectName}]] will be deleted in [[${expiringIn}]] ([[${expiresOn}]]).</p>
 
-<p>To keep your project, visit <a th:href="@{${publicUrl}+'administrator/projects/'+${projectId}}">[[${projectName}]]</a> in the SkillTree dashboard and click the 'Keep' button.</p>
+<p>If you wish to stop receiving these emails, visit <a th:href="@{${publicUrl}+'administrator/projects/'+${projectId}}">[[${projectName}]]</a> in the SkillTree dashboard and click the 'Keep' button or delete your Project.</p>
 
 <p>
 Always yours, <br/> -SkillTree Bot
